# kit-kalman-demos

./: .gitmodules  README.md  README_simulacion.md
kalman/: README.md  package.xml  setup.py
kalman/kalman/: cli.py  config.py  util.py
kalman/kalman/explore/: wfd.py
kalman_bringup/: CMakeLists.txt  README.md  package.xml
kalman_bringup/launch/: cartographer.launch.py  inspect_urdf.launch.py  kalman_bringup.launch.py  monitor_robot.launch.py  navigation.launch.py
kalman_bringup/map/: living_room.pgm  living_room.yaml  mapa_kalman.pgm  mapa_kalman.yaml
kalman_demos/: package.xml  setup.cfg  setup.py
kalman_demos/kalman_demos/: antivuelco.py  control_p.py  cuadrado.py  debug_intensities.py  debug_scan.py  espiral.py  evitar_obstaculos.py  explorador.py  radar.py  seguidor_paredes.py  telemetria_live.py
kalman_description/: CMakeLists.txt  README.md  package.xml
kalman_description/config/: cartographer_lds_2d.lua  kalman.yaml  navigation.yaml  telem.yaml
kalman_description/launch/: display_rviz.launch.py
kalman_description/rviz/: cartographer.rviz  robot.rviz
kalman_description/urdf/: robot.urdf.xacro
kalman_description/urdf/xacro/: caster_wheel.xacro  chassis.xacro  gazebo.xacro  properties.xacro  sensors.xacro  wheel.xacro
