<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman</name>
  <version>0.0.0</version>
  <description>ROS2 packages for Robotics Kalman Kit</description>
  <maintainer email="kalmanrobotics@gmail.com">Kalman Robotics</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://kalmanrobotics.io/</url>
  <url type="repository">https://github.com/Kalman-Robotics/kit-kalman-ros2</url>
  <url type="bugtracker">https://github.com/Kalman-Robotics/kit-kalman-ros2/issues</url>

  <depend>rclpy</depend>
  <exec_depend>kalman_bringup</exec_depend>
  <exec_depend>kalman_description</exec_depend> 
  <!-- <exec_depend>kalman_gazebo</exec_depend>   -->
  <exec_depend>kalman_interfaces</exec_depend>
  <exec_depend>kalman_demos</exec_depend>
  <!-- <exec_depend>kalman_telemetry</exec_depend> -->
  <!-- <exec_depend>kalman_teleop</exec_depend> -->
  <!-- <exec_depend>kalman_imu</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
