<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_demos</name>
  <version>0.0.0</version>
  <description>Demos en Python para el Kit-Kalman de Kalman Robotics</description>
  <maintainer email="kalmanrobotics@gmail.com">Kalman Robotics</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://kalmanrobotics.io/</url>
  <url type="repository">https://github.com/Kalman-Robotics/kit-kalman-demos</url>
  <url type="bugtracker">https://github.com/Kalman-Robotics/kit-kalman-demos/issues</url>

  <depend>rclpy</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
